8197959: [TESTBUG] Some (App)CDS tests require modification due to the removal of the Java EE and CORBA modules
Reviewed-by: iklam, mseledtsov